--- a/index.html
+++ b/index.html
@@ -21,5 +21,14 @@
 </div>
 
 <script src="script.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-629931208"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-629931208');
+</script>
 </body>
 </html>
